account-service-deamonSet.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: account-service-deployment
spec:
  selector:
    matchLabels:
      serverName: account-service
  template:
    metadata:
      labels:
        serverName: account-service
    spec:
      containers:
        - name: account-service-v1
          image: meghanakouchika/account-service
          ports:
            - containerPort: 8081
