account-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service-node-port
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 8081
      nodePort: 31515
  selector:
    serverName: account-service
