customer-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service-node-port
spec:
  type: NodePort
  ports:
    - port: 3051
      targetPort: 8081
      nodePort: 31516
  selector:
    serverName: customer-service
