nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-node-port
spec:
  type: NodePort
  ports:
    - port: 3051
      targetPort: 80
      nodePort: 31516
  selector:
    component: nginx
