ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: customer-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      # - path: /accounts/
      #   backend:
      #     serviceName: account-service-node-port
      #     servicePort: 3050
      - path: /customer/
        backend:
          serviceName: customer-service-node-port
          servicePort: 3051
